css modifications and autoprefixer

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Zazen Timer</title>
+  
   <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+
+  
+
 </head>
 <body>
   <div class="timer">
     <div class="timer__controls">
-      <button data-time="20" class="timer__button">20 Secs</button>
+      <button data-time="20" class="timer__button">ZAZEN TIMER</button>
       <button data-time="600" class="timer__button">Meditate 10 minutes</button>
       <button data-time="1200" class="timer__button">Meditate 20 minutes</button>
       <button data-time="2400" class="timer__button">Meditate 40 minutes</button>
@@ -19,7 +23,7 @@
         <input type="text" name="minutes" placeholder="Enter Minutes to Meditate">
       </form>
     </div>
-    <h1 id="title">Zazen Timer</h1>
+
     <div class="display">
       <h1 class="display__time-left"></h1>
       <button id="stop" type="button" disabled>Stop</button>
